# LPC-Toolkit

./: .gitignore  CMakeLists.txt  README.md  package-info.json.in
help/: mbc.allpole~.maxhelp  mbc.lpc~.maxhelp  mbc.pitch~.maxhelp
in_progress/mbc.areaScale~/: Info.plist
in_progress/mbc.areaSwap~/: mbc.areaSwap~.c
in_progress/mbc.areaSwap~/mbc.areaSwap~.xcodeproj/: project.pbxproj
misc/: README  bundlePackage
sdk-build/mbc.allpole~.mxo/Contents/: Info.plist
sdk-build/mbc.blit~.mxo/Contents/: Info.plist
sdk-build/mbc.coeffDisp~.mxo/Contents/: Info.plist
sdk-build/mbc.errfilt~.mxo/Contents/: Info.plist
sdk-build/mbc.lpc~.mxo/Contents/: Info.plist
sdk-build/mbc.pitch~.mxo/Contents/: Info.plist
source/projects/mbc.allpole_tilde/: mbc.allpole~.c
source/projects/mbc.blit_tilde/: mbc.blit~.c
source/projects/mbc.coeffDisp_tilde/: mbc.coeffDisp~.c
source/projects/mbc.errfilt_tilde/: CMakeLists.txt  errfilt~.c
source/projects/mbc.lpc_tilde/: CMakeLists.txt  mbc.lpc~.c
source/projects/mbc.lpc_tilde/mbc.lpc~.xcodeproj/: project.pbxproj
source/projects/mbc.pitch_tilde/: CMakeLists.txt  mbc.pitch~.c
src/: Info.plist  lpcToolkitDemo.maxpat
src/mbc.allpole~/: mbc.allpole~.c
src/mbc.areaGen~/: Info.plist  mbc.areaGen~.c
src/mbc.areaScale~/: mbc.areaScale~.c
src/mbc.areaSwap~/: Info.plist
src/mbc.blit~/: mbc.blit~.maxhelp
src/mbc.coeffConv~/: Info.plist  coeffConv~.c
src/mbc.coeffDisp~/: mbc.coeffDisp~.c  mbc.coeffDisp~.maxhelp
src/mbc.errfilt~/: errfilt~.c  mbc.errfilt~.maxhelp
src/mbc.lpc~/: mbc.lpc~.c
src/mbc.pitch~/: mbc.pitch~.c
(+14 files in other folders)
